fix: letter spacing issue

--- a/blocks/places.css
+++ b/blocks/places.css
@@ -28,7 +28,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 1;
-  letter-spacing: 12%;
+  letter-spacing: 0.12em;
   text-transform: uppercase;
 }
 
